--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
     "name": "jlorente/laravel-identitystamps",
-    "description": "A Laravel plugin to register and keep control of users who make creations, updates and deletions of models",
+    "description": "A Laravel plugin to register and keep control of the users who make creations, updates and deletions of models",
     "keywords": [
         "php",
         "jlorente",
         "laravel",
         "identity",
-        "identitystamp"
+        "identitystamp",
+        "created_by",
+        "updated_by",
+        "deleted_by"
     ],
     "license": "BSD-3-Clause",
     "authors": [
@@ -16,7 +19,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3"
+        "php": ">=7.0.0"
     },
     "autoload": {
         "psr-4": {
