* Blueprint is now macroed instead of extended. * Removed events registered control from the trait.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "jlorente",
         "laravel",
         "identity",
+        "auditable",
         "identitystamp",
         "created_by",
         "updated_by",
