--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "illuminate/support": "^5.5|^6.0|^7.0",
     },
     "autoload": {
         "psr-4": {
